bk_ida/gccida/c3/can_combine_p
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/can_combine_p/src/combine.c:1398:10: error: conflicting types for 'can_combine_p'
__int64  can_combine_p( rtx insn, rtx i3, rtx pred, rtx succ, rtx *pdest, rtx *psrc) 
         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/can_combine_p/src/combine.c:348:12: note: previous declaration is here
static int can_combine_p        PARAMS ((rtx, rtx, rtx, rtx, rtx *, rtx *));
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/can_combine_p/src/combine.c:1424:4: error: expected ';' after expression
rtx reg_note; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/can_combine_p/src/combine.c:1424:5: error: must use 'enum' tag to refer to type 'reg_note'
rtx reg_note; // rax 
    ^
    enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/can_combine_p/src/combine.c:1429:4: error: expected ';' after expression
rtx v38; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/can_combine_p/src/combine.c:1429:5: error: use of undeclared identifier 'v38'
rtx v38; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/can_combine_p/src/combine.c:1430:4: error: expected ';' after expression
rtx v39; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/can_combine_p/src/combine.c:1430:5: error: use of undeclared identifier 'v39'
rtx v39; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/can_combine_p/src/combine.c:1433:4: error: expected ';' after expression
rtx v42; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/can_combine_p/src/combine.c:1433:5: error: use of undeclared identifier 'v42'
rtx v42; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/can_combine_p/src/combine.c:1445:4: error: expected ';' after expression
rtx v54; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/can_combine_p/src/combine.c:1445:5: error: use of undeclared identifier 'v54'
rtx v54; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/can_combine_p/src/combine.c:1449:6: error: use of undeclared identifier 'datum'
rtx *datum; // [rsp+8h] [rbp-60h] 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/can_combine_p/src/combine.c:1450:4: error: expected ';' after expression
rtx datuma; // [rsp+8h] [rbp-60h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/can_combine_p/src/combine.c:1450:5: error: use of undeclared identifier 'datuma'
rtx datuma; // [rsp+8h] [rbp-60h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/can_combine_p/src/combine.c:1451:4: error: expected ';' after expression
rtx v60; // [rsp+10h] [rbp-58h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/can_combine_p/src/combine.c:1451:5: error: use of undeclared identifier 'v60'
rtx v60; // [rsp+10h] [rbp-58h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/can_combine_p/src/combine.c:1457:1: error: use of undeclared identifier 'v60'
v60 = insn; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/can_combine_p/src/combine.c:1470:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v12 = (  struct rtx_def *)insn[2]; 
                          ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/can_combine_p/src/combine.c:1480:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v13.rtwint = ( __int64)v12->fld[0]; 
                       ^~~~~~~~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/can_combine_p/src/obj/combine.o] Error 1
